# SoiGia

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  description.md  diagrams(1).drawio  diagrams.drawio  docker-compose.yml  package.json
.github/workflows/: ci-front-end.yml  ci.yml  deploy-vps.yml
app/back-end/: package-lock.json  package.json
app/front-end/: package-lock.json  package.json
apps/api/: Dockerfile  package.json  tsconfig.json
apps/api/src/: app.ts  server.ts
apps/api/src/config/: env.ts
apps/api/src/consumers/: price-events.consumer.ts
apps/api/src/controllers/: categories.controller.ts  price-comparison.controller.ts  products.controller.ts
apps/api/src/lib/: postgres.ts  rabbitmq.ts  redis.ts
apps/api/src/middlewares/: error-handler.ts
apps/api/src/repositories/: categories.repository.ts  (+2 more)
apps/web/: Dockerfile  index.html  package.json  tsconfig.json
apps/web/src/: App.tsx
docs/: architecture.md
docs/superpowers/plans/: 2026-06-22-soigia-scaffold.md
docs/superpowers/specs/: 2026-06-22-soigia-repo-design.md
infra/nginx/: README.md
infra/scripts/: deploy-vps.sh
tests/repo/: root-workspace.test.mjs
workers/price-crawler/: Dockerfile  README.md  pyproject.toml
workers/price-crawler/src/soigia_worker/: main.py
workers/price-crawler/src/soigia_worker/config/: settings.py
workers/price-crawler/src/soigia_worker/crawlers/: base.py  fuel_station.py
workers/price-crawler/src/soigia_worker/jobs/: collect_prices.py
workers/price-crawler/src/soigia_worker/publishers/: rabbitmq_publisher.py
(+14 files in other folders)
