[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soigia-price-crawler"
version = "0.1.0"
description = "Crawler scaffold for SoiGia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aio-pika>=9.0.0",
  "beautifulsoup4>=4.12.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
